--- a/client/src/styles/_hero.scss
+++ b/client/src/styles/_hero.scss
@@ -14,7 +14,7 @@
     align-items: center;
     gap: 1rem;
 
-    margin-bottom: 4rem;
+    margin-bottom: 8rem;
 
     font-size: 2.4rem;
 
@@ -62,7 +62,7 @@
     animation: hintAnimation 3s linear infinite;
 
     @media (max-width: $breakpoint-small) {
-      bottom: 4rem;
+      bottom: 8rem;
     }
   }
 
